# Lazarus-Tool

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: domain.rs  favorites.rs  forensics.rs  logger.rs  main.rs  net.rs  sharepoint.rs  system.rs  update.rs
src/Scripts/: backup.ps1  browser_clean.ps1  crash_audit.ps1  debloat.ps1  device_audit.ps1  fslogix_release.ps1  restore.ps1  sage_fix.ps1
