[package]
name = "lazarus"
version = "3.0.1"
edition = "2021"

[dependencies]
colored = "2.0"
run_script = "0.10"
sysinfo = "0.29"
chrono = "0.4"
dialoguer = "0.10"
winreg = "0.10"
ureq = "2.6"
serde_json = "1.0"
snmp = "0.2"
sha2 = "0.10"     # Required for Duplicate Destroyer
hex = "0.4"       # Required for Duplicate Destroyer
regex = "1.10"    # Required for BSOD Analyzer & PII Hunter
enable-ansi-support = "0.2" # <--- THE FIX

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_System_StationsAndDesktops",
]

[build-dependencies]
winres = "0.1"