[package]
name = "lazarus"
version = "3.0.6"
edition = "2021"

[dependencies]
colored = "2.0"
run_script = "0.10"
sysinfo = "0.29"
chrono = "0.4"
dialoguer = "0.10"
winreg = "0.10"
ureq = "2.6"
serde_json = "1.0"
snmp = "0.2"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
enable-ansi-support = "0.2"
serde = { version = "1.0", features = ["derive"] } # <--- NEW

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_Threading",
]

[build-dependencies]
winres = "0.1"